fix: alignment and overflow

--- a/src/features/components/templates/navigation/tab-nav-without-border/styles.module.scss
+++ b/src/features/components/templates/navigation/tab-nav-without-border/styles.module.scss
@@ -5,7 +5,7 @@
 }
 .swiper_wrapper {
     position: relative;
-    max-width: 37rem;
+    max-width: 30rem;
     margin-inline: auto;
 }
 .swiper_slide {
